.debug/rulehub-policies/templates/gatekeeper.yaml
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  annotations:
    rulehub.id: ban.hostnetwork.template
  labels:
    chart/version: 0.1.0
  name: k8sbanhostnetwork
spec:
  crd:
    spec:
      names:
        kind: K8sBanHostNetwork
  targets:
  - rego: |
      package k8sbanhostnetwork
      deny[msg] {
        input.review.object.spec.hostNetwork == true
        msg := "hostNetwork is not allowed"
      }
    target: admission.k8s.gatekeeper.sh


---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  annotations:
    rulehub.id: block.hostpath.template
  labels:
    chart/version: 0.1.0
  name: k8sblockhostpath
spec:
  crd:
    spec:
      names:
        kind: K8sBlockHostPath
  targets:
  - rego: |
      package k8sblockhostpath
      deny[msg] {
        some v
        v := input.review.object.spec.volumes[_]
        v.hostPath
        msg := "hostPath volumes are not allowed"
      }
    target: admission.k8s.gatekeeper.sh


---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  annotations:
    rulehub.id: disallow.latest.template
  labels:
    chart/version: 0.1.0
  name: k8sdisallowlatest
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatest
  targets:
  - rego: |
      package k8sdisallowlatest
      deny[msg] {
        some c
        c := input.review.object.spec.containers[_]
        endswith(c.image, ":latest")
        msg := sprintf("image uses latest tag: %s", [c.image])
      }
    target: admission.k8s.gatekeeper.sh


---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  annotations:
    rulehub.id: limit.capabilities.template
  labels:
    chart/version: 0.1.0
  name: k8slimitcapabilities
spec:
  crd:
    spec:
      names:
        kind: K8sLimitCapabilities
  targets:
  - rego: |
      package k8slimitcapabilities
      deny[msg] {
        some c
        c := input.review.object.spec.containers[_]
        not c.securityContext.capabilities.drop[_] == "ALL"
        msg := "Must drop ALL capabilities"
      }
    target: admission.k8s.gatekeeper.sh


---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  annotations:
    rulehub.id: no.privileged.template
  labels:
    chart/version: 0.1.0
  name: k8snoprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sNoPrivileged
  targets:
  - rego: |
      package k8snoprivileged
      deny[msg] {
        some c
        c := input.review.object.spec.containers[_]
        c.securityContext.privileged == true
        msg := "privileged containers are not allowed"
      }
    target: admission.k8s.gatekeeper.sh


---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  annotations:
    rulehub.id: no.run.as.root.template
  labels:
    chart/version: 0.1.0
  name: k8srunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRunAsNonRoot
  targets:
  - rego: |
      package k8srunasnonroot
      deny[msg] {
        some c
        c := input.review.object.spec.containers[_]
        not c.securityContext.runAsNonRoot
        msg := "Containers must set securityContext.runAsNonRoot=true"
      }
    target: admission.k8s.gatekeeper.sh


---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  annotations:
    rulehub.id: require.imagepullpolicy.always.template
  labels:
    chart/version: 0.1.0
  name: k8simagepullalways
spec:
  crd:
    spec:
      names:
        kind: K8sImagePullAlways
  targets:
  - rego: |
      package k8simagepullalways
      deny[msg] {
        some c
        c := input.review.object.spec.containers[_]
        c.imagePullPolicy != "Always"
        msg := "imagePullPolicy must be Always"
      }
    target: admission.k8s.gatekeeper.sh


---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  annotations:
    rulehub.id: require.resources.template
  labels:
    chart/version: 0.1.0
  name: k8srequireresources
spec:
  crd:
    spec:
      names:
        kind: K8sRequireResources
  targets:
  - rego: |
      package k8srequireresources
      missing_limits(c) { not c.resources } { not c.resources.limits }
      missing_requests(c) { not c.resources } { not c.resources.requests }
      deny[msg] {
        some c
        c := input.review.object.spec.containers[_]
        missing_limits(c) or missing_requests(c)
        msg := "container must set resources.requests and resources.limits"
      }
    target: admission.k8s.gatekeeper.sh


---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBanHostNetwork
metadata:
  annotations:
    rulehub.id: ban.hostnetwork
  labels:
    chart/version: 0.1.0
  name: ban-hostnetwork
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod


---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockHostPath
metadata:
  annotations:
    rulehub.id: block.hostpath
  labels:
    chart/version: 0.1.0
  name: block-hostpath
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod


---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatest
metadata:
  annotations:
    rulehub.id: disallow.latest
  labels:
    chart/version: 0.1.0
  name: disallow-latest
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod


---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sLimitCapabilities
metadata:
  annotations:
    rulehub.id: limit.capabilities
  labels:
    chart/version: 0.1.0
  name: limit-capabilities
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod


---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoPrivileged
metadata:
  annotations:
    rulehub.id: no.privileged
  labels:
    chart/version: 0.1.0
  name: no-privileged
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod


---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRunAsNonRoot
metadata:
  annotations:
    rulehub.id: no.run.as.root
  labels:
    chart/version: 0.1.0
  name: require-nonroot
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod


---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sImagePullAlways
metadata:
  annotations:
    rulehub.id: require.imagepullpolicy.always
  labels:
    chart/version: 0.1.0
  name: require-imagepull-always
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod


---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireResources
metadata:
  annotations:
    rulehub.id: require.resources
  labels:
    chart/version: 0.1.0
  name: require-resources
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
